--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
-.env*.local
+
 
 # vercel
 .vercel
@@ -35,4 +34,6 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
+#secret
 .env
+
