--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "20.11.30",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "18.2.67",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
